@@ -92,8 +92,6 @@ handler (see below) .<br>
   </li>
   <li> Complete SMP support.<br>
   </li>
-  <li> <br>
-  </li>
   <li>Well documented.<br>
   </li>
 </ul>
